--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -1,21 +1,29 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4,
+    "colab": {
+      "name": "lstm.ipynb",
+      "provenance": []
+    }
   },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4CB5nmMKrXBj"
+      },
+      "source": [
+        "import torch\n",
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
