--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -2,13 +2,17 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "orig_nbformat": 4,
+    "colab": {
+      "name": "smai_project_lstm.ipynb",
+      "provenance": []
+    },
     "language_info": {
       "name": "python"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "lstm.ipynb",
-      "provenance": []
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -21,6 +25,40 @@
         "import torch\n",
         "import numpy as np\n",
         "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kDq-AYP7uA0W",
+        "outputId": "9b2f9bc6-50df-436f-fd32-bead718a8f0d"
+      },
+      "source": [
+        "print()"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5vTtOPJluEGd"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
