--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -8,8 +8,10 @@
       "provenance": [],
       "collapsed_sections": [
         "D-tVJd0Ml3LM",
-        "YYkWSvpHUCjK",
-        "c6dDq-RggUCW"
+        "c6dDq-RggUCW",
+        "4SO146rZgZGT",
+        "Gii9zxgI0-wX",
+        "ha_f_KPk09BY"
       ]
     },
     "language_info": {
@@ -2690,21 +2692,6 @@
         "from torch.utils.data import TensorDataset, DataLoader, RandomSampler, SequentialSampler\n",
         "from torch.nn.utils.rnn import pack_sequence\n",
         "\n",
-        "# def collate_fn(data):\n",
-        "#     feat, label = zip(*data)\n",
-        "#     batch_size = len(feat)\n",
-        "#     tok_size = len(feat[0])\n",
-        "#     vec_size = 25\n",
-        "#     features = torch.zeros((batch_size, tok_size, vec_size))\n",
-        "#     for index, fex in enumerate(feat):\n",
-        "#         for wordind in range(tok_size):\n",
-        "#             if(fex[wordind] == -1):\n",
-        "#                 features[index, wordind, :] = torch.zeros(vec_size)\n",
-        "#             else:\n",
-        "#                 features[index, wordind, :] = torch.tensor(text_embedder[text_embedder.index2word[fex[wordind]]])\n",
-        "#     label = torch.stack(label)\n",
-        "#     return features, label\n",
-        "\n",
         "def collate_fn(data):\n",
         "    feat, label = zip(*data)\n",
         "    batch_size = len(feat)\n",
@@ -2722,11 +2709,21 @@
         "    label = torch.stack(label)\n",
         "    return pack_sequence(features, enforce_sorted=False), label\n",
         "\n",
+        "batch_size = 32"
+      ],
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4SFeFlf1Pkkt"
+      },
+      "source": [
         "train_dataset = TensorDataset(sentences, labels)\n",
-        "batch_size = 32\n",
         "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, collate_fn=collate_fn)"
       ],
-      "execution_count": 91,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -2745,24 +2742,25 @@
       },
       "source": [
         "class LSTMClassifier(nn.Module):\n",
-        "    def __init__(self, feature_dim, hidden_dim, num_layers, num_classes):\n",
+        "    def __init__(self, feature_dim, hidden_dim, num_layers, num_classes, batch_size):\n",
         "        super(LSTMClassifier, self).__init__()\n",
         "        self.hidden_size = hidden_dim\n",
         "        self.num_layers = num_layers\n",
+        "        self.batch_size = batch_size\n",
         "        self.lstm = nn.LSTM(input_size=feature_dim, hidden_size=hidden_dim, num_layers=num_layers, batch_first=True)\n",
         "        self.fc = nn.Linear(hidden_dim, num_classes)\n",
         "        self.softmax = nn.Softmax(dim=1)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        h_0 = Variable(torch.zeros(self.num_layers, batch_size, self.hidden_size))\n",
-        "        c_0 = Variable(torch.zeros(self.num_layers, batch_size, self.hidden_size))\n",
+        "        h_0 = Variable(torch.zeros(self.num_layers, self.batch_size, self.hidden_size))\n",
+        "        c_0 = Variable(torch.zeros(self.num_layers, self.batch_size, self.hidden_size))\n",
         "        output, (h_n, c_n) = self.lstm(x, (h_0, c_0))\n",
         "        h_n = h_n.view(-1, self.hidden_size)\n",
         "        out = self.fc(h_n)\n",
         "        out = self.softmax(out)\n",
         "        return out"
       ],
-      "execution_count": 94,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -2820,7 +2818,7 @@
         "    if(epoch % 1 == 0):\n",
         "      print(f\"Epoch {epoch}: loss = {avg_loss}\")"
       ],
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -2834,7 +2832,76 @@
             "Epoch 5: loss = 1.8295520067214965\n",
             "Epoch 6: loss = 1.8261387882232667\n",
             "Epoch 7: loss = 1.818788179206848\n",
-            "Epoch 8: loss = 1.8185432174682616\n"
+            "Epoch 8: loss = 1.8185432174682616\n",
+            "Epoch 9: loss = 1.8100512769699098\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-oXk4IDAN8i-"
+      },
+      "source": [
+        "# Testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnpwOtUQN-kL"
+      },
+      "source": [
+        "test_total = dataset['test']\n",
+        "\n",
+        "test_data_x = []\n",
+        "test_data_y = []\n",
+        "\n",
+        "for i in random.sample(range(test_total.shape[0]), 1000):\n",
+        "    tmp = list(test_total[i].values())\n",
+        "    test_data_x.append(tmp[2])\n",
+        "    test_data_y.append(tmp[0])\n",
+        "\n",
+        "sentences = []\n",
+        "for i in range(len(test_data_x)):\n",
+        "    sentences.append(cleanSentence(test_data_x[i]))\n",
+        "\n",
+        "sentences = torch.tensor(sentences)\n",
+        "labels = torch.tensor(test_data_y)\n",
+        "\n",
+        "test_dataset = TensorDataset(sentences, labels)\n",
+        "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, collate_fn=collate_fn)"
+      ],
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IT75-Ad8OKxw",
+        "outputId": "3fae8680-de78-48bd-8b2e-b9759c813c00"
+      },
+      "source": [
+        "with torch.no_grad():\n",
+        "    count = 0\n",
+        "    for step, batch in enumerate(test_dataloader):\n",
+        "        x, y = batch\n",
+        "        y_pred = lstm(x)\n",
+        "        y_label = torch.argmax(y_pred, dim=1)\n",
+        "        count += torch.sum(y == y_label)\n",
+        "    print(f'Accuracy of the LSTM model: {count * 100 / sentences.shape[0]:.2f} %')"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy of the LSTM model: 92.30 %\n"
           ]
         }
       ]
@@ -2842,7 +2909,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-uPlH_065VVp"
+        "id": "wLFoLNRmSX75"
       },
       "source": [
         ""
